docs/called-kubeflow-upgrade-docs/overlay-template/patches/requestauthentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: dex-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
    - issuer: https://REPLACE_TARGET_HOST/dex
      forwardOriginalToken: true
      outputClaimToHeaders:
        - header: kubeflow-userid
          claim: email
        - header: kubeflow-groups
          claim: groups
      fromHeaders:
        - name: Authorization
          prefix: "Bearer "
