docs/called-kubeflow-upgrade-docs/overlay-template/patches/dex-keycloak-secret-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: auth
spec:
  template:
    spec:
      containers:
        - name: dex
