docs/called-kubeflow-upgrade-docs/overlay-template/patches/allow-platform-token-readyz.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-platform-token-readyz
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            ports: ["8081"]
            methods: ["GET"]
            paths: ["/readyz"]
